--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-    "scripts": {
-      "docs:dev": "vuepress dev",
-      "docs:build": "vuepress build"
-    }
+  "scripts": {
+    "docs:dev": "vuepress dev",
+    "docs:build": "vuepress build"
+  },
+  "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.0.0-rc.1"
+  }
 }
