--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "docs:build": "vuepress build"
   },
   "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.0.0-rc.1"
+    "@vuepress/plugin-pwa": "^1.0.4"
   }
 }
