--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "docs:build": "vuepress build"
   },
   "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.0.4"
+    "@vuepress/plugin-pwa": "^1.0.4",
+    "vuepress": "^1.0.4"
   }
 }
