--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,7 @@ jobs:
       env:
         CI: true
   publish:
+    runs-on: ubuntu-latest
     needs: [build]
     steps:
     - uses: actions/github-packages@master
