--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,4 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
-    - uses: actions/github-packages@master
+    - uses: maxheld83/ghpages@v0.1.1
+        env:
+          BUILD_DIR: "public/"
+        
