--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,11 @@ jobs:
         npm run docs:build
       env:
         CI: true
+    - name: Archive Production Artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: web-build
+        path: docs
   publish:
     runs-on: ubuntu-latest
     needs: [build]
@@ -30,13 +35,17 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: web-build
       -
         name: Deploy
         if: success()
         uses: crazy-max/ghaction-github-pages@master
         with:
           target_branch: gh-pages
-          build_dir: docs
+          build_dir: web-build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
