--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "docs:dev": "vuepress dev",
-    "docs:build": "vuepress build"
+    "docs:dev": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress dev",
+    "docs:build": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress build"
   },
   "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.0.4",
-    "vuepress": "^1.0.4"
+    "@vuepress/plugin-pwa": "^1.9.9",
+    "vuepress": "^1.9.9"
   },
   "dependencies": {
-    "@vuepress/core": "^1.8.2"
+    "@vuepress/core": "^1.9.9"
   }
 }
